test/resources/typer/failing/StupidestMatch.scala
object StupidestMatch
    L.Nil() match { case 0 => () }
end StupidestMatch